<resources>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="app_name">BaldaGame</string>
    <string name="adding_letter_alert">Enter letter</string>
    <string name="new_letter_wrong_size_message">Enter one letter</string>
    <string name="negative_button_alert">Cancel</string>
    <string name="must_use_new_letter_message">You must use entered letter</string>
    <string name="new_word_added_message">New word added</string>
    <string name="score">score</string>
    <string name="your_word">Your word</string>
    <string name="wrong_word_message">This word was used or don\'t exist</string>
    <string name="time_is_over">Time is over</string>
    <string name="draw">Draw!</string>
    <string name="want_to_play_again">Want to play again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="winner_message"> win!</string>
    <string name="two_players">2 players</string>
    <string name="new_game">New game</string>
    <string name="first_player_name">First player name</string>
    <string name="second_player_name">Second player name</string>
    <string name="main_word">Enter main word</string>
    <string name="random_word">Random word</string>
    <string name="set_timer">Set timer</string>
    <string name="time_to_turn">Choose time to turn</string>
    <string name="wrong_word_length">Error, enter word with length 5</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="without_timer">Without timer</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="online_game">Online game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="game_with_bot">Game with bot</string>
    <string name="restartGame">Restart game</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="pause">Pause</string>
    <string name="continue_game">Continue</string>
    <string name="very_hard">Very hard</string>
    <string name="dynamically">Dynamically</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
